testing/tests/ui/match_with_extra.stderr
error: failed to parse template source
 --> <source attribute>:3:5
  |
       3 |     // Help, I forgot how to write comments!
         |     ^ close to this token
         |
 --> tests/ui/match_with_extra.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
